--- a/src/app/modules/auth/components/register/register.component.html
+++ b/src/app/modules/auth/components/register/register.component.html
@@ -6,7 +6,7 @@
         <input
           formControlName="username"
           type="text"
-          placeholder="Nom d'utilisateur"
+          placeholder="Nom de l'utilisateur"
         />
         <div
           *ngIf="username?.invalid && (username?.dirty || username?.touched)"
