--- a/src/app/components/section/item/detail-item/detail-item.component.css
+++ b/src/app/components/section/item/detail-item/detail-item.component.css
@@ -1,18 +1,22 @@
 .container {
+  height: 100%;
   top: 7rem;
   height: calc(100% - 7rem);
-  max-width: 75rem;
-  margin: 0 auto;
+  max-width: 77rem;
+  margin: 0;
+  margin-top: 7.77rem;
   padding: 1.11rem;
-  padding-top: 9.99rem;
   padding-left: 7.07%;
   padding-right: 7.07%;
-  align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: end;
+  justify-content: flex-end;
 }
 
 .detail-container {
   display: flex;
-  gap: 1.5rem;
+  gap: 1.11rem;
 }
 
 .image-wrapper {
@@ -94,6 +98,13 @@ button {
 @media (max-width: 888px) {
   .container  {
     top: 22rem;
-    height: calc(100% - 22rem);  }
+    height: calc(100% - 22rem);
+    margin-top: 19rem;
+  }
+  .image-wrapper {
+    top: 7.7rem;
+    height: calc(100% - 7.7rem);
+  }
+
 }
 
