--- a/src/app/components/section/item/list-item-without-meilisearch/list-item-without-meilisearch.component.css
+++ b/src/app/components/section/item/list-item-without-meilisearch/list-item-without-meilisearch.component.css
@@ -8,12 +8,14 @@
   flex-direction: column;
   justify-content: space-between;
   transition: box-shadow 0.3s, transform 0.3s;
-  border-radius: 9px;
+  border-radius: 7.7%;
   overflow: scroll;
   background-color: #ffffff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   flex-basis: calc(25% - 2rem);
   height: 100%;
+  min-width: 19rem;
+  max-height: fit-content;
   cursor: pointer;
   margin: 0;
   margin-bottom: 1.11rem;
@@ -79,4 +81,12 @@ mat-card-title {
 
 ::ng-deep .mat-select-min-line {
   font-size: 1.11rem;
+}
+
+@media screen and (max-width: 888px) {
+  .container {
+    margin-left: 0.77rem;
+    top: 22rem;
+    height: calc(100% - 22rem);
+  }
 }
