--- a/src/app/components/shared/nav/nav.component.css
+++ b/src/app/components/shared/nav/nav.component.css
@@ -66,7 +66,7 @@
 @media (max-width: 888px) {
   .nav-container {
     flex-direction: column;
-    height: auto;
+    height: 19rem;
   }
 
   .nav-wrapper {
@@ -75,25 +75,31 @@
 
   .menu {
     flex-direction: column;
-    gap: 1rem;
+    gap: 0.89rem;
     align-items: center;
+    margin: 0;
+  }
+
+  .logo-search-container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    margin: 0;
   }
 
   .search-bar-large {
-    margin-top: 1rem;
-    margin-bottom: 1rem;
+    margin-top: 0;
+    margin-bottom: 0;
     margin-left: 0;
-  }
-
-  .nav-aside {
-    margin-right: 0;
+    flex-grow: 0;
+    margin: 0;
   }
 
   .nav-actions {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-grow: 0.111;
+    flex-grow: 0;
+    margin: 0;
+    gap: 0;
   }
 
 }
