--- a/src/app/modules/auth/components/login/login.component.css
+++ b/src/app/modules/auth/components/login/login.component.css
@@ -1,8 +1,10 @@
 .login-container {
+  height: 100vh;
+  height: 100%;
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
   background: linear-gradient(to right, #e0eafc, #cfdef3);
 }
 
@@ -83,7 +85,12 @@
 }
 
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 888px) {
+  .container {
+    top: 22rem;
+    height: calc(100% - 22rem);
+  }
+
   .login-card {
     width: 77%;
   }
