--- a/src/app/modules/auth/components/login/login.component.html
+++ b/src/app/modules/auth/components/login/login.component.html
@@ -6,14 +6,14 @@
         <input
           formControlName="username"
           type="text"
-          placeholder="Adresse e-mail"
+          placeholder="Nom de l'utilisateur"
         />
         <div
           *ngIf="username?.invalid && (username?.dirty || username?.touched)"
           class="error"
         >
           <div *ngIf="username?.errors?.['required']">
-            L'adresse e-mail est requise.
+            Le nom de l'utilisateur est requis.
           </div>
         </div>
       </div>
