--- a/src/app/pages/user-account/profile-user-page/profile-user-page.component.css
+++ b/src/app/pages/user-account/profile-user-page/profile-user-page.component.css
@@ -43,7 +43,7 @@
 
 .submit-btn {
   padding: 0.6rem 1.2rem;
-  background-color: #4CAF50;
+  background-color: 0BB9F0;
   color: #ffffff;
   border: none;
   border-radius: 4px;
@@ -53,8 +53,8 @@
 }
 
 .submit-btn:hover {
-  background-color: #45a049;
-}
+  color: #2196F3;
+  background-color: rgba(32, 150, 243, 0.11);}
 
 .address-group {
   display: flex;
@@ -66,9 +66,9 @@
   flex: 1;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 888px) {
   .container {
-    padding: 1.5rem;
+    padding: 1.11rem;
   }
 
   .address-group .form-group {
