--- a/src/app/pages/not-found/not-found-page.component.css
+++ b/src/app/pages/not-found/not-found-page.component.css
@@ -1,8 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@600;900&display=swap');
 
 body, html {
-  height: 100%;
-  margin: 0;
+  height: 100vh;  margin: 0;
   background: #f3f3f3;
   font-family: 'Nunito Sans', sans-serif;
   display: flex;
@@ -39,8 +38,7 @@ body, html {
 .illustration:after {
   content: '';
   width: 100%;
-  height: 100%;
-  position: absolute;
+  height: 100vh;  position: absolute;
   left: 0;
   top: 0;
   background: rgb(255, 64, 128);
@@ -52,8 +50,7 @@ body, html {
   left: 0;
   top: 0;
   width: 100%;
-  height: 100%;
-  background: #f3f3f3;
+  height: 100vh;  background: #f3f3f3;
   border-radius: 50%;
   transform: scale(0.84);
 }
