displayed account button with different style linked to auth status

--- a/src/app/components/shared/aside-account-user/account-user-button.component.css
+++ b/src/app/components/shared/aside-account-user/account-user-button.component.css
@@ -10,6 +10,13 @@ aside {
 }
 
 aside:hover {
+  background-color: #EBEBEB;
+}
+
+.logged-in {
   color: #0BB9F0;
+}
+
+.logged-in:hover {
   background-color: rgba(32, 150, 243, 0.11);
 }
