--- a/src/app/components/shared/aside-account-user/account-user-drawer/account-user-drawer.component.html
+++ b/src/app/components/shared/aside-account-user/account-user-drawer/account-user-drawer.component.html
@@ -13,6 +13,6 @@
   </div>
   <button class="logout-button">
     <mat-icon>exit_to_app</mat-icon>
-    <span class="drawer-item-text">Déconnexion</span>
+    <span class="drawer-item-text" (click)="onLogout()">Déconnexion</span>
   </button>
 </div>
