--- a/src/app/components/shared/nav/nav.component.css
+++ b/src/app/components/shared/nav/nav.component.css
@@ -62,6 +62,17 @@
   background-color: rgba(255, 64, 127, 0.11);
 }
 
+.logged-in {
+  color: blue;
+  background-color: blue;
+}
+
+.logged-out {
+  color: black;
+  background-color: grey;
+}
+
+
 /* Media Query for mobile devices */
 @media (max-width: 888px) {
   .nav-container {
