added service for orders by userId

--- a/src/app/components/shared/order/order-list/order-list.component.css
+++ b/src/app/components/shared/order/order-list/order-list.component.css
@@ -45,3 +45,10 @@ td {
 .order-item-expanded {
   background-color: #f9f9f9;
 }
+
+.no-orders-title {
+  text-align: center;
+  font-size: 2em;
+  color: red;
+  margin-top: 2rem;
+}
