--- a/src/app/components/shared/aside-account-user/account-user-drawer/account-user-drawer.component.html
+++ b/src/app/components/shared/aside-account-user/account-user-drawer/account-user-drawer.component.html
@@ -1,4 +1,5 @@
 <div class="container">
+  <h1 *ngIf="isAuthenticated$ | async">Bienvenue {{ username$ | async }}</h1>
   <div class="drawer-item" (click)="openProfilePage()">
     <mat-icon>person</mat-icon>
     <span class="drawer-item-text">Mon profil</span>
