--- a/src/app/components/shared/aside-cart/cart/cart.component.css
+++ b/src/app/components/shared/aside-cart/cart/cart.component.css
@@ -81,6 +81,13 @@ h1 {
   overflow: auto;
 }
 
+.login-link {
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
+
+
 @media screen and (max-width: 555px) {
   .mobile-hide {
     display: none;
