--- a/src/app/components/shared/aside-cart/cart/cart.component.html
+++ b/src/app/components/shared/aside-cart/cart/cart.component.html
@@ -3,9 +3,14 @@
     <span *ngIf="isAuthenticated$ | async"
       >Bienvenue {{ username$ | async }}</span
     >
-    <span style="margin: 1.11rem" *ngIf="!(isAuthenticated$ | async)"
-      >Bienvenue : identifiez-vous <mat-icon>login</mat-icon></span
+    <span
+      class="login-link"
+      style="margin: 1.11rem"
+      *ngIf="!(isAuthenticated$ | async)"
+      (click)="goToLogin()"
     >
+      Identifiez-vous <mat-icon>login</mat-icon>
+    </span>
   </h1>
 
   <table class="cart-table">
