--- a/src/app/components/shared/order/order-list/order-list.component.html
+++ b/src/app/components/shared/order/order-list/order-list.component.html
@@ -4,12 +4,7 @@
       #statusSelectRef
       (change)="filterOrdersByStatus(statusSelectRef.value)"
     >
-      <option value="all">
-        <span *ngIf="isAdmin"
-          >Tous les commandes de {{ currentUser.username }}</span
-        >
-        <span *ngIf="!isAdmin">Tous mes commandes</span>
-      </option>
+      <option value="all">Toutes les commandes</option>
       <option value="En attente de confirmation">
         En attente de confirmation
       </option>
@@ -18,87 +13,67 @@
       <option value="Livré">Livré</option>
     </select>
 
-    <table class="order-list" *ngIf="filteredOrderList$ | async as orders">
-      <thead>
-        <tr>
-          <th>N° de commande</th>
-          <th>Date</th>
-          <th>Total TTC</th>
-          <th>
-            <span *ngIf="isAdmin">Status</span>
-          </th>
-          <th></th>
-        </tr>
-      </thead>
-      <tbody>
-        <ng-container *ngFor="let order of orders">
-          <tr></tr>
-
-          <tr
-            *ngIf="order.totalPriceHT > 0 || order.totalPriceTTC > 0"
-            (click)="toggleOrderDetails(order)"
-            [ngClass]="{ 'order-item-expanded': isOrderExpanded(order) }"
-          >
-            <td>{{ order.orderNumber }}</td>
-            <td>
-              <span *ngIf="isAdmin">{{ order.date | date }}</span>
-              <span *ngIf="!isAdmin">{{
-                order.date | date : "dd/MM/yyyy"
-              }}</span>
-            </td>
-            <td>{{ order.totalPriceTTC | number : "1.2-2" }} €</td>
-            <td *ngIf="isAdmin">
-              <select
-                #orderStatusSelectRef
-                (change)="
-                  updateOrderStatus(
-                    currentUser,
-                    order.orderNumber,
-                    orderStatusSelectRef.value
-                  )
-                "
-              >
-                <option value="PENDING">En attente de confirmation</option>
-                <option value="CONFIRMED">Confirmé</option>
-                <option value="SHIPPING">En cours de livraison</option>
-                <option value="DELIVERED">Livré</option>
-              </select>
-            </td>
-            <td class="td-details">Voir les détails</td>
+    <ng-container *ngIf="filteredOrderList$ | async as orders">
+      <table class="order-list" *ngIf="orders.length > 0; else noOrders">
+        <thead>
+          <tr>
+            <th>N° de commande</th>
+            <th>Date</th>
+            <th>Total TTC</th>
+            <th>Status</th>
+            <th>Actions</th>
           </tr>
-          <tr *ngIf="isOrderExpanded(order)">
-            <td colspan="5">
-              <table class="order-list">
-                <thead>
-                  <tr>
-                    <th>Article</th>
-                    <th>Prix Unitaire HT</th>
-                    <th>TVA</th>
-                    <th>Prix Unitaire TTC</th>
-                    <th>Quantité</th>
-                    <th>Sous-total TTC</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr *ngFor="let item of order.orderLines">
-                    <td>{{ item.book?.title }}</td>
-                    <td>{{ item.unitPriceHT | number : "1.2-2" }} €</td>
-                    <td>{{ item.unitPriceTTC | number : "1.2-2" }} €</td>
-                    <td>{{ item.orderedQuantity }}</td>
-                    <td>
-                      {{
-                        item.unitPriceTTC * item.orderedQuantity
-                          | number : "1.2-2"
-                      }}
-                      €
-                    </td>
-                  </tr>
-                </tbody>
-              </table>
-            </td>
-          </tr>
-        </ng-container>
-      </tbody>
-    </table>
+        </thead>
+        <tbody>
+          <ng-container *ngFor="let order of orders">
+            <tr
+              *ngIf="order.totalPriceHT > 0 || order.totalPriceTTC > 0"
+              (click)="toggleOrderDetails(order)"
+              [ngClass]="{ 'order-item-expanded': isOrderExpanded(order) }"
+            >
+              <td>{{ order.orderNumber }}</td>
+              <td>{{ order.date | date : "dd/MM/yyyy" }}</td>
+              <td>{{ order.totalPriceTTC | number : "1.2-2" }} €</td>
+              <td>{{ getStatusByOrderId(order.id) }}</td>
+              <td class="td-details">Voir les détails</td>
+            </tr>
+            <tr *ngIf="isOrderExpanded(order)">
+              <td colspan="6">
+                <table class="order-list">
+                  <thead>
+                    <tr>
+                      <th>Article</th>
+                      <th>Prix Unitaire HT</th>
+                      <th>TVA</th>
+                      <th>Prix Unitaire TTC</th>
+                      <th>Quantité</th>
+                      <th>Sous-total TTC</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr *ngFor="let item of order.orderLines">
+                      <td>{{ item.book?.title }}</td>
+                      <td>{{ item.unitPriceHT | number : "1.2-2" }} €</td>
+                      <td>{{ item.unitPriceTTC | number : "1.2-2" }} €</td>
+                      <td>{{ item.orderedQuantity }}</td>
+                      <td>
+                        {{
+                          item.unitPriceTTC * item.orderedQuantity
+                            | number : "1.2-2"
+                        }}
+                        €
+                      </td>
+                    </tr>
+                  </tbody>
+                </table>
+              </td>
+            </tr>
+          </ng-container>
+        </tbody>
+      </table>
+    </ng-container>
+    <ng-template #noOrders>
+      <h2>Veuillez effectuer une première commande !</h2>
+    </ng-template>
   </div>
 </div>
