--- a/src/app/components/shared/aside-cart/cart/cart.component.css
+++ b/src/app/components/shared/aside-cart/cart/cart.component.css
@@ -120,3 +120,30 @@ h1 {
     display: none;
   }
 }
+
+.dialog-text {
+  font-size: 2.02rem;
+  padding-left: 0.111rem;
+  display: inline-block;
+  animation: scalePulse 1.11s ease-in-out infinite;
+}
+
+.dialog-content {
+  font-size: large;
+  font-weight: bold;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  width: auto;
+  height: auto;
+  padding: 3.33rem;
+  border-radius: 77%;
+  background-color: rgba(33, 150, 243, 0.11);
+  animation:  scaleAndFadeOut 4.004s ease-in-out forwards;
+}
+
+.dialog-content, .dialog-text {
+  animation:  scaleAndFadeOut 4.004s ease-in-out forwards;
+}
