--- a/src/app/components/shared/aside-cart/cart/cart.component.html
+++ b/src/app/components/shared/aside-cart/cart/cart.component.html
@@ -98,3 +98,11 @@
     </button>
   </div>
 </div>
+
+<!-- Dialog content -->
+<ng-template #dialogContent>
+  <div class="dialog-content">
+    <span class="dialog-text">Veuillez commander un article payant</span>
+    <mat-icon>shopping_cart</mat-icon>
+  </div>
+</ng-template>
