--- a/src/app/components/shared/order/order-list/order-list.component.html
+++ b/src/app/components/shared/order/order-list/order-list.component.html
@@ -1,8 +1,8 @@
 <div class="container">
   <div class="status-selector">
     <select
-      #statusSelectRef
-      (change)="filterOrdersByStatus(statusSelectRef.value)"
+      #statusSelectRefFilter
+      (change)="filterOrdersByStatus(statusSelectRefFilter.value)"
     >
       <option value="all">Toutes les commandes</option>
       <option value="En attente de confirmation">
@@ -13,7 +13,7 @@
       <option value="Livré">Livré</option>
     </select>
 
-    <ng-container *ngIf="orderListByUserId$ | async as orders">
+    <ng-container *ngIf="orderList$ | async as orders">
       <table class="order-list" *ngIf="orders.length > 0; else noOrders">
         <thead>
           <tr>
@@ -34,7 +34,23 @@
               <td>{{ order.orderNumber }}</td>
               <td>{{ order.date | date : "dd/MM/yyyy" }}</td>
               <td>{{ order.totalPriceTTC | number : "1.2-2" }} €</td>
-              <td>{{ order.status }}</td>
+              <td>
+                <select
+                  #statusSelectRefAdmin
+                  (change)="
+                    modifyOrderStatusById(order.id, statusSelectRefAdmin.value)
+                  "
+                  *ngIf="isAdmin"
+                >
+                  <option value="PENDING">En attente de confirmation</option>
+                  <option value="CONFIRMED">Confirmé</option>
+                  <option value="SHIPPING">En cours de livraison</option>
+                  <option value="DELIVERED">Livré</option>
+                </select>
+                <span *ngIf="!isAdmin">
+                  {{ getOrderStatusDescription(order.status) }}
+                </span>
+              </td>
               <td class="td-details">Voir les détails</td>
             </tr>
             <tr *ngIf="isOrderExpanded(order)">
