--- a/src/app/components/shared/aside-account-user/account-user-drawer/account-user-drawer.component.css
+++ b/src/app/components/shared/aside-account-user/account-user-drawer/account-user-drawer.component.css
@@ -74,7 +74,11 @@ h1:hover {
     justify-content: center;
   }
 
-  .drawer-item-text {
+  .drawer-item-text{
+    display: none;
+  }
+
+  h1 {
     display: none;
   }
 }
