--- a/src/app/components/admin/admin-order/admin-order.component.html
+++ b/src/app/components/admin/admin-order/admin-order.component.html
@@ -14,7 +14,7 @@
     </select>
 
     <ng-container *ngIf="filteredOrderList$ | async as orders">
-      <table class="order-list" *ngIf="orders.length > 0; else noOrders">
+      <table class="order-list">
         <thead>
           <tr>
             <th>N° de commande</th>
@@ -106,8 +106,5 @@
         </tbody>
       </table>
     </ng-container>
-    <ng-template #noOrders>
-      <h2>Veuillez effectuer une première commande !</h2>
-    </ng-template>
   </div>
 </div>
