--- a/src/app/components/shared/order/order-list/order-list.component.html
+++ b/src/app/components/shared/order/order-list/order-list.component.html
@@ -4,7 +4,7 @@
       #statusSelectRefFilter
       (change)="filterOrdersByStatus(statusSelectRefFilter.value)"
     >
-      <option value="all">Toutes les commandes</option>
+      <option value="all">Toutes mes commandes</option>
       <option value="En attente de confirmation">
         En attente de confirmation
       </option>
@@ -13,7 +13,7 @@
       <option value="Livré">Livré</option>
     </select>
 
-    <ng-container *ngIf="orderList$ | async as orders">
+    <ng-container *ngIf="filteredOrderList$ | async as orders">
       <table class="order-list" *ngIf="orders.length > 0; else noOrders">
         <thead>
           <tr>
@@ -34,12 +34,11 @@
               <td>{{ order.orderNumber }}</td>
               <td>{{ order.date | date : "dd/MM/yyyy" }}</td>
               <td>{{ order.totalPriceTTC | number : "1.2-2" }} €</td>
-              <td>{{ order.status | orderStatus }}</td>
-
+              <td>{{ order.status | translateOrderStatus }}</td>
               <td class="td-details">Voir les détails</td>
             </tr>
             <tr *ngIf="isOrderExpanded(order)">
-              <td colspan="6">
+              <td colspan="5">
                 <table class="order-list">
                   <thead>
                     <tr>
@@ -74,7 +73,10 @@
       </table>
     </ng-container>
     <ng-template #noOrders>
-      <h2>Veuillez effectuer une première commande !</h2>
+      <h2>
+        Veuillez effectuer une première commande ou attendre l'avancement de
+        votre commande !
+      </h2>
     </ng-template>
   </div>
 </div>
