--- a/src/app/components/admin/admin-order/admin-order.component.css
+++ b/src/app/components/admin/admin-order/admin-order.component.css
@@ -6,6 +6,12 @@
   align-items: center;
 }
 
+span {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .status-selector {
   text-align: center;
   width: 100%;
@@ -29,6 +35,8 @@ td {
   width: 100%;
   margin: 1rem 0;
   border-collapse: collapse;
+  align-items: center;
+  justify-content: center;
 }
 
 .order-list th,
@@ -52,3 +60,31 @@ td {
   color: red;
   margin-top: 2rem;
 }
+
+.detail-text {
+  display: none;
+}
+
+.mobile {
+  display: inline-block;
+}
+
+.download-text {
+  display: none;
+}
+
+@media (min-width: 888px) {
+
+  .detail-text {
+    display: inline-block;
+  }
+
+  .mobile {
+    display: none;
+  }
+
+  .download-text {
+    display: inline-block;
+  }
+}
+
