--- a/src/app/components/section/item/list-item-without-meilisearch/list-item-without-meilisearch.component.css
+++ b/src/app/components/section/item/list-item-without-meilisearch/list-item-without-meilisearch.component.css
@@ -1,25 +1,26 @@
 .container {
-  margin: 1.11rem;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
+  grid-gap: 1.11rem;
+  margin-left: 4.4%;
+  margin-top: 2.2rem;
 }
-
 
 .custom-card {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-  transition: box-shadow 0.3s, transform 0.3s;
+  align-items: center;
+  justify-content: space-around;
   border-radius: 7.7%;
   overflow: scroll;
   background-color: #ffffff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  flex-basis: calc(25% - 2rem);
-  height: 100%;
-  min-width: 19rem;
-  max-height: fit-content;
+  transition: box-shadow 0.3s, transform 0.3s;
   cursor: pointer;
-  margin: 0;
-  margin-bottom: 1.11rem;
+  height: 404px;
+  width: 240px;
 }
+
 
 .custom-card:hover {
   box-shadow: 0 4px 20px rgba(0, 0, 0, 0.15);
@@ -27,9 +28,10 @@
   z-index: 1;
 }
 
+
 .custom-card-actions {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: center;
   align-items: center;
 }
 
@@ -38,9 +40,11 @@
 }
 
 mat-card-image {
-  width: 100%;
+  align-items: center;
   height: auto;
   object-fit: cover;
+  width: 100%;
+
 }
 
 .item-description {
@@ -83,10 +87,39 @@ mat-card-title {
   font-size: 1.11rem;
 }
 
-@media screen and (max-width: 888px) {
+@media screen and (max-width: 1036px) {
   .container {
-    margin-left: 0.77rem;
-    top: 22rem;
-    height: calc(100% - 22rem);
+    margin-left: 7.7%;
   }
 }
+
+@media screen and (max-width: 806px) {
+  .container {
+    margin-left: 22.7%;
+  }
+}
+
+@media screen and (max-width: 606px) {
+  .container {
+    margin-left: 14%;
+  }
+}
+
+@media screen and (max-width: 555px) {
+  .container {
+    margin-left: 4.4%;
+  }
+}
+
+@media screen and (max-width: 505px) {
+  .container {
+    margin-left: 22%;
+  }
+}
+
+@media screen and (max-width: 365px) {
+  .container {
+    margin-left: 8.9%;
+  }
+}
+
