--- a/src/app/components/shared/nav/nav.component.css
+++ b/src/app/components/shared/nav/nav.component.css
@@ -1,11 +1,16 @@
 .nav-container {
-  height: 7rem;
+  height: 7.07rem;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
 }
 
 .nav-wrapper {
   display: flex;
-  align-items: stretch;
-  justify-content: space-between;
+  align-items: center;
+  justify-content: space-around;
   width: 100%;
 }
 
@@ -72,45 +77,23 @@
   background-color: grey;
 }
 
-
-/* Media Query for mobile devices */
 @media (max-width: 888px) {
-  .nav-container {
-    flex-direction: column;
-    height: 19rem;
-  }
-
-  .nav-wrapper {
-    flex-direction: column;
-  }
-
   .menu {
-    flex-direction: column;
-    gap: 0.89rem;
-    align-items: center;
-    margin: 0;
+    display: none;
   }
 
-  .logo-search-container {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    margin: 0;
+  .mobile-menu {
+    display: block;
   }
-
-  .search-bar-large {
-    margin-top: 0;
-    margin-bottom: 0;
-    margin-left: 0;
-    flex-grow: 0;
-    margin: 0;
-  }
-
-  .nav-actions {
-    flex-grow: 0;
-    margin: 0;
-    gap: 0;
-  }
-
 }
+
+@media (min-width: 889px) {
+  .menu {
+    display: flex;
+  }
+
+  .mobile-menu {
+    display: none;
+  }
+}
+
