--- a/src/app/components/shared/order/order-list/order-list.component.html
+++ b/src/app/components/shared/order/order-list/order-list.component.html
@@ -21,7 +21,7 @@
             <th>Date</th>
             <th>Total TTC</th>
             <th>Statut</th>
-            <th colspan="2">Actions</th>
+            <th style="text-align: left" colspan="2">Actions</th>
           </tr>
         </thead>
         <tbody>
@@ -34,15 +34,31 @@
               <td>{{ order.orderNumber }}</td>
               <td>{{ order.date | date : "dd/MM/yyyy" }}</td>
               <td>{{ order.totalPriceTTC | number : "1.2-2" }} €</td>
-              <td>{{ order.status | translateOrderStatus }}</td>
+              <td>
+                <span
+                  ><mat-icon class="status-icon">{{
+                    getStatusIcon(order.status)
+                  }}</mat-icon>
+                  <span class="status-text">
+                    {{ order.status | translateOrderStatus }}
+                  </span>
+                </span>
+              </td>
               <td class="td-details" (click)="getOrderlinesByOrderId(order.id)">
-                Voir les détails
+                <mat-icon>visibility</mat-icon>
+                <span class="detail-text">Détails</span>
               </td>
               <td>
                 <button (click)="downloadInvoice(order, $event)">
-                  <span style="display: flex; align-items: center">
+                  <span
+                    style="
+                      display: flex;
+                      align-items: center;
+                      justify-content: center;
+                    "
+                  >
                     <mat-icon>download</mat-icon>
-                    <span>Télécharger la facture</span>
+                    <span class="download-text">Télécharger la facture</span>
                   </span>
                 </button>
               </td>
