--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -27,8 +27,7 @@
 
 .slide {
   width: 100%;
-  height: 100%;
-  background-size: contain;
+  height: 100vh !important;  background-size: contain;
   background-repeat: no-repeat;
   background-position: center center;
 }
