--- a/src/app/components/section/item/detail-item/detail-item.component.css
+++ b/src/app/components/section/item/detail-item/detail-item.component.css
@@ -1,14 +1,11 @@
 .container {
-  height: 100%;
+  height: 100vh !important;
   max-width: 77rem;
   margin: 0;
-  margin-top: 7.77rem;
-  padding: 1.11rem;
-  padding-left: 7.07%;
   padding-right: 7.07%;
   display: flex;
   flex-direction: column;
-  align-items: end;
+  align-items: flex-end;
   justify-content: flex-end;
 }
 
@@ -91,13 +88,45 @@ button {
 
 .reviews-title {
   margin-top: 3.3rem;
+  cursor: pointer;
 }
 
-@media (max-width: 888px) {
-  .image-wrapper {
-    top: 7.7rem;
-    height: calc(100% - 7.7rem);
+@media (max-width: 505px) {
+  .container {
+    margin-top: 14%;
+  }
+}
+
+@media (max-width: 426px) {
+  .container {
+    margin-top: 11rem;
+  }
+}
+
+@media (max-width: 444px) {
+  .container {
+    top: 0;
+    margin-top: 36rem;
+    padding: 0;
+    flex-direction: column;
   }
 
+  .detail-container {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .detail-image {
+    max-width: 100%;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .detail-info {
+    max-width: 100%;
+  }
 }
+
 
