--- a/src/app/components/shared/nav/nav.component.html
+++ b/src/app/components/shared/nav/nav.component.html
@@ -1,44 +1,47 @@
 <mat-toolbar class="nav-container">
   <div class="nav-wrapper">
-    <a class="nav-logo" routerLink="/">
-      <img src="../../../assets/L2i.ico" />
-    </a>
+    <!-- logo and menu for responsive display-->
+    <div>
+      <a class="nav-logo" routerLink="/">
+        <img src="../../../assets/L2i.ico" />
+      </a>
 
-    <!-- Desktop menu -->
-    <div class="menu">
-      <button mat-button routerLink="/items/books">Articles</button>
-      <button mat-button routerLink="/items/books/new">Nouveautés</button>
-      <button mat-button routerLink="/items/books/promos">Soldes</button>
-      <button mat-button routerLink="/items/books/comments">Avis</button>
-    </div>
+      <!-- Desktop menu -->
+      <div class="menu">
+        <button mat-button routerLink="/items/books">Articles</button>
+        <button mat-button routerLink="/items/books/new">Nouveautés</button>
+        <button mat-button routerLink="/items/books/promos">Soldes</button>
+        <button mat-button routerLink="/items/books/comments">Avis</button>
+      </div>
 
-    <!-- Mobile menu -->
-    <div class="mobile-menu">
-      <button
-        mat-icon-button
-        [matMenuTriggerFor]="menu"
-        aria-label="Example icon-button with a menu"
-      >
-        <mat-icon>more_vert</mat-icon>
-      </button>
-      <mat-menu #menu="matMenu">
-        <button mat-menu-item routerLink="/items/books">
-          <mat-icon>menu_book</mat-icon>
-          <span>Articles</span>
+      <!-- Mobile menu -->
+      <div class="mobile-menu">
+        <button
+          mat-icon-button
+          [matMenuTriggerFor]="menu"
+          aria-label="Example icon-button with a menu"
+        >
+          <mat-icon>more_vert</mat-icon>
         </button>
-        <button mat-menu-item routerLink="/items/books/new">
-          <mat-icon>trending_up</mat-icon>
-          <span>Nouveautés</span>
-        </button>
-        <button mat-menu-item routerLink="/items/books/promos">
-          <mat-icon>euro</mat-icon>
-          <span>Soldes</span>
-        </button>
-        <button mat-menu-item routerLink="/items/books/comments">
-          <mat-icon>speaker_notes</mat-icon>
-          <span>Avis</span>
-        </button>
-      </mat-menu>
+        <mat-menu #menu="matMenu">
+          <button mat-menu-item routerLink="/items/books">
+            <mat-icon>menu_book</mat-icon>
+            <span>Articles</span>
+          </button>
+          <button mat-menu-item routerLink="/items/books/new">
+            <mat-icon>trending_up</mat-icon>
+            <span>Nouveautés</span>
+          </button>
+          <button mat-menu-item routerLink="/items/books/promos">
+            <mat-icon>euro</mat-icon>
+            <span>Soldes</span>
+          </button>
+          <button mat-menu-item routerLink="/items/books/comments">
+            <mat-icon>speaker_notes</mat-icon>
+            <span>Avis</span>
+          </button>
+        </mat-menu>
+      </div>
     </div>
 
     <!-- Search bar -->
