--- a/src/styles.css
+++ b/src/styles.css
@@ -1,9 +1,9 @@
 @import '~@angular/material/prebuilt-themes/indigo-pink.css';
 /* You can add global styles to this file, and also import other style files */
-@tailwind base;
+/* @tailwind base;
 @tailwind components;
-@tailwind utilities;
+@tailwind utilities; */
 
-html, body { height: 100%; }
-body { margin: 0; padding: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html, body { height: 100vh !important; }
+body { height: 100vh !important; margin: 0; padding: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
