--- a/src/app/components/section/item/detail-item/detail-item.component.css
+++ b/src/app/components/section/item/detail-item/detail-item.component.css
@@ -91,22 +91,11 @@ button {
   cursor: pointer;
 }
 
-@media (max-width: 505px) {
-  .container {
-    margin-top: 14%;
-  }
-}
-
-@media (max-width: 426px) {
-  .container {
-    margin-top: 11rem;
-  }
-}
 
 @media (max-width: 444px) {
   .container {
     top: 0;
-    margin-top: 36rem;
+    margin-top: 27rem;
     padding: 0;
     flex-direction: column;
   }
@@ -129,4 +118,47 @@ button {
   }
 }
 
+/* Update for small screens */
+@media (max-width: 404px) {
+  .container {
+    top: 0;
+    padding: 0;
+    flex-direction: column;
+  }
 
+  .detail-container {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .detail-image {
+    max-width: 44%;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .detail-info {
+    max-width: 90%;
+    text-align: center;
+  }
+
+  .detail-info h1,
+  .detail-info h2 {
+    font-size: 1.2rem;
+  }
+
+  .detail-info p {
+    font-size: 1rem;
+  }
+
+  .adminActions {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  button {
+    margin-top: 0.5rem;
+  }
+}
