displayed nav responsive

--- a/src/app/components/section/item/list-item-without-meilisearch/list-item-without-meilisearch.component.css
+++ b/src/app/components/section/item/list-item-without-meilisearch/list-item-without-meilisearch.component.css
@@ -101,7 +101,8 @@ mat-card-title {
 
 @media screen and (max-width: 777px) {
   .container {
-    margin-left:17%
+    margin-left: 17%;
+    margin-top: 7.77rem;
   }
 }
 
