--- a/src/app/components/section/item/list-item-without-meilisearch/list-item-without-meilisearch.component.html
+++ b/src/app/components/section/item/list-item-without-meilisearch/list-item-without-meilisearch.component.html
@@ -38,15 +38,17 @@
       </div>
     </mat-card>
   </div>
-  <mat-paginator
-    [length]="totalItems$ | async"
-    [pageSize]="itemsPerPage"
-    [pageSizeOptions]="[12, 24, 36, 48]"
-    [pageIndex]="getCurrentPageIndex()"
-    (page)="onPageChange($event)"
-    [showFirstLastButtons]="true"
-    intlNextPageLabel="Page suivante"
-    intlPreviousPageLabel="Page précédente"
-    intlItemsPerPageLabel="Articles par page"
-  ></mat-paginator>
+  <div class="paginator-container">
+    <mat-paginator
+      [length]="totalItems$ | async"
+      [pageSize]="itemsPerPage"
+      [pageSizeOptions]="[12, 24, 36, 48]"
+      [pageIndex]="getCurrentPageIndex()"
+      (page)="onPageChange($event)"
+      [showFirstLastButtons]="true"
+      intlNextPageLabel="Page suivante"
+      intlPreviousPageLabel="Page précédente"
+      intlItemsPerPageLabel="Articles par page"
+    ></mat-paginator>
+  </div>
 </div>
