--- a/src/app/components/section/order/order-list/order-list.component.css
+++ b/src/app/components/section/order/order-list/order-list.component.css
@@ -68,7 +68,11 @@ td {
   margin-top: 2rem;
 }
 
-@media (max-width: 707px) {
+@media (max-width: 777px) {
+  .container {
+    margin-top: 11.1rem;
+  }
+
   .status-text {
     display: none;
   }
