--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -1,40 +1,77 @@
+body, html {
+  margin: 0;
+  height: 100vh !important;
+  overflow: hidden;
+}
+
+.background {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-position: center;
+  filter: blur(10px);
+  z-index: -1;
+  transition: background 3.33s ease-in-out;
+}
+
+
+
+header {
+  position: relative;
+  height: 100vh;
+}
+
 .slider {
   position: relative;
-  top: 3.3rem;
-  height: 98vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-bottom: 0%;
+  top: 11.1rem;
+  height: 55vh;
+  transition: all 3.33s ease-in-out;
+  z-index: 1;
 }
 
 .arrows {
   position: absolute;
-  top: 50%;
+  top: 33.3%;
   left: 0;
   right: 0;
   display: flex;
-  justify-content: space-between;
-  padding: 0 2em;
-  z-index: 1;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+  gap: 33.3rem;
+  padding: 0 220px;
+  z-index: 10;
 }
 
 .arrow {
   cursor: pointer;
-  color: white;
-  font-size: 2em;
+  color: #FF4080;
+  font-size: 1.11rem;
+  background-color: transparent;
+  padding: 0.22rem;
+  transition: all 0.333s ease-in-out;
+}
+
+
+.arrow:hover {
+  color: #0BB9F0;
 }
 
 .slide {
   width: 100%;
-  height: 100vh !important;  background-size: contain;
+  height: 55vh;
+  background-size: contain;
   background-repeat: no-repeat;
   background-position: center center;
+  transition: all 1.11s ease-in-out;
 }
 
 .dotsContainer {
   position: absolute;
-  bottom: 1em;
+  bottom: 0;
   left: 0;
   right: 0;
   display: flex;
@@ -43,10 +80,17 @@
 
 .dot {
   cursor: pointer;
-  color: #bbb;
-  font-size: 2em;
+  color: #0BB9F0;
+  font-size: 1.11rem;
+  margin: 1.11rem;
+  text-shadow: 1px 1px 1px black;
 }
 
 .dot-active {
-  color: white;
+  color: #FF4080;
+}
+
+.dot-active:hover {
+  color: #0BB9F0;
+  cursor: pointer;
 }
