added footer all over the app

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,5 +26,6 @@
   <mat-sidenav-content>
     <app-nav></app-nav>
     <router-outlet></router-outlet>
+    <app-footer></app-footer>
   </mat-sidenav-content>
 </mat-sidenav-container>
