--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,6 +26,13 @@
   <mat-sidenav-content>
     <app-nav></app-nav>
     <router-outlet></router-outlet>
-    <app-footer></app-footer>
+    <mat-accordion style="position: relative; z-index: -1">
+      <mat-expansion-panel>
+        <mat-expansion-panel-header>
+          <mat-panel-title><mat-icon>infos</mat-icon> </mat-panel-title>
+        </mat-expansion-panel-header>
+        <app-footer></app-footer>
+      </mat-expansion-panel>
+    </mat-accordion>
   </mat-sidenav-content>
 </mat-sidenav-container>
