--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -42,6 +42,17 @@
     </div>
 
     <div class="footer-section">
+      <h3 class="footer-title">
+        Besoin d'aide<mat-icon>contact_support</mat-icon>
+      </h3>
+      <ul class="footer-links">
+        <li><a href="#">Retours articles</a></li>
+        <li><a href="#">Tarifs et livraison</a></li>
+        <li><a href="#">Service client</a></li>
+      </ul>
+    </div>
+
+    <div class="footer-section">
       <img src="../../../assets/L2i.ico" alt="Logo L2i" class="footer-logo" />
     </div>
   </div>
