--- a/src/app/components/shared/aside-cart/aside.component.html
+++ b/src/app/components/shared/aside-cart/aside.component.html
@@ -4,9 +4,13 @@
   </ng-container>
 
   <ng-template #emptyCart>
-    <mat-icon [ngClass]="{'animation-cart-empty': ((totalItemsInCart$ | async) ?? 0) === 0}">shopping_cart</mat-icon>
+    <mat-icon
+      [ngClass]="{
+        'animation-cart-empty': ((totalItemsInCart$ | async) ?? 0) === 0
+      }"
+      >shopping_cart</mat-icon
+    >
   </ng-template>
-
 
   <span>{{ (totalItemsInCart$ | async) || 0 }}</span>
 </aside>
@@ -14,7 +18,7 @@
 <!-- Dialog content -->
 <ng-template #dialogContent>
   <div class="dialog-content">
-   <mat-icon>visibility_off</mat-icon>
+    <mat-icon>visibility_off</mat-icon>
     <span class="dialog-text">Votre panier est vide</span>
     <mat-icon>shopping_cart</mat-icon>
   </div>
