--- a/src/app/components/shared/nav/search-item/search-item.component.html
+++ b/src/app/components/shared/nav/search-item/search-item.component.html
@@ -6,8 +6,8 @@
       #searchInputElement
       matInput
       [formControl]="searchInput"
-      placeholder="Rechercher ..."
-      class="input-field w-full"
+      [placeholder]="placeholder"
+      class="input-field"
     />
 
     <button
