--- a/src/app/components/section/item/list-item-without-meilisearch/list-item-without-meilisearch.component.css
+++ b/src/app/components/section/item/list-item-without-meilisearch/list-item-without-meilisearch.component.css
@@ -1,11 +1,14 @@
 .container {
-  height: 100h !important;
+  position: relative;
+  z-index: 11;
+  overflow: auto;
+  height: calc(100vh - 131px) !important;
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
   grid-gap: 1.11rem;
-  margin-bottom: 3.33rem;
   margin-left: 1.11%;
   margin-top: 1.11rem;
+  padding-bottom: 131px;
 }
 
 .custom-card {
