--- a/src/app/components/shared/nav/nav.component.css
+++ b/src/app/components/shared/nav/nav.component.css
@@ -1,12 +1,31 @@
 .nav-container {
   height: 7rem;
+  background-color: rgba(0, 0, 0, 0.98);
+  color: #fff;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+.nav-container-scrolled {
+  background-color: rgba(0, 0, 0, 0.55) !important;
 }
 
 .nav-wrapper {
   display: flex;
+  flex-direction: row;
   align-items: center;
-  justify-content: space-around;
+  justify-content: start;
+  gap: 3.33rem;
   width: 100%;
+}
+
+.logo-menu-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
 }
 
 .menu {
@@ -14,14 +33,21 @@
   gap: 3.3rem;
 }
 
-.menu button {
+.menu :hover {
   font-size: 1.1rem;
+  color: #fff;
+  background-color: #14BAF0;
+  transform: scale(1.11);
+  transition: transform 1..11s ease-in, transform 3.33s ease-out;
+
 }
 
 .logo-search-container {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-around;
+  color: aliceblue;
+
 }
 
 .nav-logo img {
@@ -39,6 +65,7 @@
 }
 
 .search-bar-large {
+  color: #fff;
   flex-grow: 7.7;
 }
 
@@ -51,6 +78,7 @@
   width: 2.02rem;
   height: 2.02rem;
   border-radius: 55%;
+  color: #fff;
 }
 
 .admin-add-item:hover {
@@ -68,21 +96,32 @@
   background-color: grey;
 }
 
-@media (max-width: 936px) {
-  .menu {
-    gap: 1.11rem;
+@media (max-width: 1144px) {
+  mat-toolbar {
+    margin: 0 !important;
   }
-}
 
-@media (max-width: 836px) {
-  .menu {
-    gap: 0.44rem;
+  .nav-wrapper {
+    margin: 0 !important;
+
   }
-}
 
-@media (max-width: 809px) {
+  .logo-search-container {
+    margin: 0 !important;
+    padding: 0;
+      gap: 0;
+  }
+
+  a.nav-logo {
+    margin: 0 !important;
+  }
+
+  .nav-actions {
+    padding: 0;
+  }
+
   .menu {
-    gap: 0;
+    gap: 0rem;
   }
 }
 
@@ -92,47 +131,43 @@
   }
 }
 
-/* Media Query for mobile devices */
 @media (max-width: 777px) {
+  mat-toolbar {
+    margin: 0;
+    padding: 0;
+  }
+
   .nav-container {
-    flex-direction: column;
-    height: 11rem;
+    height: 14rem;
   }
 
   .nav-wrapper {
+    display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 0 !important;
+    padding: 0 !important;
+    gap: 0 !important;
   }
 
-  .menu {
-    gap: 1.11rem;
-    display: none;
-  }
-
-  .mobile-menu {
-    display: block;
-  }
-
-  .logo-search-container {
+  .logo-menu-container {
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content:left;
-    margin: 0;
-    margin-right: 3.33rem;
-  }
-
-  .search-bar-large {
-    margin-top: 0;
-    margin-bottom: 0;
-    margin-left: 0;
-    flex-grow: 0;
-    margin: 0;
-  }
-
-  .nav-actions {
-    flex-grow: 0;
+    justify-content: center;
+    width: 100%;
     margin: 0;
     gap: 0;
   }
 
+  .menu {
+    display: none;
+  }
+
+  .search-container {
+    gap: 0;
+    padding-top: 1.11rem;
+  }
 }
+
